cruise-control: migrate last PowerMock tests to EasyMock partial mocks + reflection
What: Remove PowerMock 2.0.9 (powermock-module-junit4 + powermock-api-easymock)
from the :cruise-control subproject by rewriting its two remaining
PowerMock consumers without changing their assertions or coverage:
- AbstractKafkaSampleStoreTest
- SpnegoLoginServiceWithAuthServiceLifecycleTest
Both now build on the existing EasyMock dependency (already bumped to 5.4.0
in the previous commit for JDK17 support) plus plain java.lang.reflect for
the field-injection cases. Two private methods in
SpnegoLoginServiceWithAuthServiceLifecycle are promoted to package-private
to allow the EasyMock partial-mock subclass to override them.

Why: PowerMock 2.0.9's classloader-based bytecode rewriter relies on JDK
internals that JDK 16+ no longer permits (see the prior reporter
ContainerMetricUtilsTest migration commit for the same diagnosis). Both
tests failed class-level under JDK 17 with "Test mechanism" /
"initializationError" before any assertion ran. After this commit there
are no PowerMock consumers left in :cruise-control or :cruise-control-metrics-reporter
and the powermock-* dependencies can be dropped from build.gradle.

How:
- SpnegoLoginServiceWithAuthServiceLifecycle.java: promote
  getFullPrincipalFromGssContext and addContext from `private` to
  package-private (no `private` modifier). Both remain non-public; the
  effective API surface for callers outside the package is unchanged.
  Each new declaration carries a one-line comment explaining the
  visibility bump exists for testability via EasyMock partial mocks
  (EasyMock's Byte-Buddy subclassing needs the override target to be at
  least package-private).
- AbstractKafkaSampleStoreTest.java: drop @RunWith(PowerMockRunner.class),
  @PowerMockIgnore, @PrepareForTest; replace Whitebox.setInternalState(
  obj, "_field", value) with a small `setField` reflection helper at the
  bottom of the class. Walks the class hierarchy so it works o